# projet_fain

./: .gitignore  CMakeLists.txt  README.md
src/: bresenham.c  bresenham.h  color.c  color.h  main.c  main.cpp  point.h  polygon.c  polygon.h  scan_line_filling.c  scan_line_filling.h  stack.c  stack.h
